--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
